quic-rpc-derive/tests/compile_fail/extra_attr_types.stderr
error: Unknown arguments provided: ["fnord"]
 --> tests/compile_fail/extra_attr_types.rs:5:5
  |
5 |     #[rpc(tx = NoSender, rx = NoReceiver, fnord = Foo)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
